Archive2/5f/8e26c15c188dcf/output
+ g++-4.8 -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp: In function ‘int main(int, char**)’:
main.cpp:42:33: error: request for member ‘operator<<’ is ambiguous
   request << Header {"foo","bar"} << Param{"page", "1"};
                                 ^
main.cpp:15:14: note: candidates are: T& WithHeaders<T>::operator<<(const Header&) [with T = HttpRequest]
   virtual T &operator <<(const Header &h) {
              ^
main.cpp:26:16: note:                 T& WithQuery<T>::operator<<(const Param&) [with T = HttpRequest]
     virtual T &operator <<(Param const&q) {
                ^
